# raga

./: .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  pyproject.toml
auraview/: help.py  main.py  version.py
auraview/basic_functions/: convert.py  os_funs.py  time_funs.py  trash.py
auraview/core/: core.py  image_controller.py  photo_manager.py  photo_module.py
auraview/gui/: gui.py  gui_functions.py
docs/: pypi.md  test.md
raga/: help.py  main.py
raga/core/: core.py  photo_manager.py  photo_module.py
raga/gui/: gui.py  gui_functions.py
