[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auraview"
dynamic = ["version"]
description = "A fast, distraction-free photo viewer."
readme = { file = "LONG_DESCRIPTION.md", content-type = "text/markdown" }
license = { text = "MIT" }
authors = [
    { name = "Benevant Mathew", email = "benevantmathewv@gmail.com" }
]
requires-python = ">=3.7"

dependencies = [
    "pandas",
    "piexif",
    "pillow",
    "pillow_heif",
    "send2trash",
    "tkcalendar"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]

[project.scripts]
auraview = "auraview.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["auraview", "auraview.*"]

[tool.setuptools.package-data]
"auraview" = ["config/extensions.json"]

[tool.setuptools.dynamic]
version = { attr = "auraview.version.__version__" }

[dependency-groups]
dev = [
    "build>=1.1.1",
    "setuptools>=68.0.0",
    "twine>=4.0.2",
]

[project.urls]
Homepage = "https://github.com/benevantmathew/auraview"
